[package]
name = "grok"
version = "0.1.0"
authors = ["Faraz Vahedi <kfv@kfv.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "grok"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
git2 = "0.14.2"
reqwest = "0.11.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.5.8"

[features]
